--- a/source/src/main/webapp/css/check.css
+++ b/source/src/main/webapp/css/check.css
@@ -14,6 +14,7 @@ h2 {
   width: 500px;
 }
 
+/* チェック部分　*/
 #check_list {
  padding: 10px;
  padding-top: 25px;
@@ -63,4 +64,37 @@ input[type="radio"] {
 
 hr {
   width: 90%;
+}
+
+/* ダイアログの部分 */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  left: 0; top: 0; width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.5);
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 1em;
+  margin: 0 auto 15% auto;
+  width: 300px;
+  text-align: center;
+  border-radius: 8px;
+}
+
+.modal-content button {
+  margin: 0.5em;
+  margin-right: 45px;
+  margin-left: 45px;
+}
+#text_top{
+  margin-top: 10px;
+  margin-bottom: 2px;
+}
+
+#text_bottom{
+  margin-top: 3px;
+  margin-bottom: 25px;
 }
