--- a/source/src/main/webapp/css/check_results.css
+++ b/source/src/main/webapp/css/check_results.css
@@ -1,1 +1,150 @@
 @charset "UTF-8";
+h2 {
+  padding: 10px;
+  margin-bottom: 10px;
+  margin: auto;
+  border: 1px solid #333333;
+  border-radius: 10px;
+  background-color: #9fdfec;
+  max-width: 500px;
+  
+}
+.check_results {
+	max-width: 700px;
+	padding: 10px;	
+	margin-bottom: 10px;
+	margin: auto;
+	border: 1px solid #333333;
+	border-radius: 10px;
+
+}
+.tab-container {
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+/* ラジオボタンを非表示にする */
+.tab-input {
+    display: none;
+}
+
+/* タブのスタイル */
+.tab-labels {
+    display: flex;
+    border-bottom: 2px solid black;
+}
+
+.tab-group_left{
+  display: flex;
+  justify-content: flex-start; /* 左グループは左寄せ */
+}
+
+.tab-group_right{
+  display: flex;
+  justify-content: flex-end;   /* 右グループは右寄せ */
+}
+
+
+.tab-label {
+    padding: 10px 20px;
+    cursor: pointer;
+    border: 2px solid black;
+    border-bottom: none;
+    margin-right: 5px;
+    border-radius: 8px 8px 0 0;
+}
+
+/* コンテンツエリアのスタイル */
+.tab-content {
+    display: none;
+    padding: 20px;
+    border: 2px solid black;
+    border-top: none;
+}
+
+/* チェックされたタブのスタイル */
+#tab1:checked ~ .tab-labels .label1,
+#tab2:checked ~ .tab-labels .label2,
+#tab3:checked ~ .tab-labels .label3,
+#tab4:checked ~ .tab-labels .label4 {
+    background: #9fdfec;
+
+}
+
+/* チェックされたコンテンツを表示 */
+#tab1:checked ~ .content1,
+#tab2:checked ~ .content2,
+#tab3:checked ~ .content3,
+#tab4:checked ~ .content4 {
+    display: block;
+}
+.radar-container {
+	display: flex;
+	align-items: flex-start;
+	gap: 24px;
+}
+/* レーダーチャートのスタイル */
+.radar-chart-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 230px;
+    height: 230px;
+    margin: 0 auto;
+    padding: 35px;
+    box-sizing: content-box;
+}
+
+.radar-chart-1 svg {
+    width: 100%;
+    height: 100%;
+}
+
+.radar-chart-1 dl {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.radar-chart-1 dl > div {
+    position: absolute;
+    color: #777;
+    font-size: .6em;
+    text-align: center;
+}
+
+.radar-chart-1 dl > div:nth-child(1) {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.radar-chart-1 dl > div:nth-child(2) {
+    bottom: 25%;
+    right: 10%;
+    transform: translateX(50%);
+}
+
+.radar-chart-1 dl > div:nth-child(3) {
+    bottom: 25%;
+    left: 10%;
+    transform: translateX(-50%);
+}
+
+.radar-chart-1 dd {
+    margin: 0;
+}
+
+.label-column {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+}
+
+.check_comments {
+	border-top: 2px solid black;
+}
+.check_advice {
+	
+}
