--- a/source/src/main/webapp/css/check.css
+++ b/source/src/main/webapp/css/check.css
@@ -9,6 +9,7 @@ h2 {
   padding: 10px;
   margin: auto;
   margin-bottom: 10px;
+  margin-top: 20px;
   border: 1px solid #333333;
   border-radius: 10px;
   background-color: #9fdfec;
