--- a/source/src/main/webapp/css/register.css
+++ b/source/src/main/webapp/css/register.css
@@ -82,8 +82,8 @@ main {
   border-bottom-color: #333;
 }
 
-/* ログイン */
-#login {
+/* 登録ページ */
+#register {
     width: 360px;
     padding: 1% 0;
     margin: auto;
@@ -91,11 +91,11 @@ main {
     border-radius: 20%;
     background: #fff;
 }
-#login a{
+#register a{
 	color:#2f514f;
 	font-size:14px;
 }
-#login-form {
+#registerForm {
     position: relative;
     z-index: 1;
     max-width: 360px;
@@ -103,16 +103,19 @@ main {
     text-align: center;
     font-size:18px;
 }
-.login-item {
+.register-label{
+	text-align: left;
+}
+.register-item {
     margin: 15px;
     box-sizing: border-box;
     color: #2f514f;
 }
-.login-item input {
+.register-item input {
 	height: 24px;
 	margin-top:3px;
 }
-.loginButton {
+.registerButton {
     text-transform: uppercase;
     background: #a4f0b6;
     border: 1px solid;
@@ -123,10 +126,10 @@ main {
     transition: all 0.3 ease;
     cursor: pointer;
 }
-.loginButton:hover,.loginButton:active,.loginButton:focus {
+.registerButton:hover,.registerButton:active,.registerButton:focus {
     background: #a4f0b6;
 }
-#error-message,#error-area {
+#errorMessage,#error-area {
 	color: red;
 	font-size: 14px;
 }
