--- a/source/src/main/webapp/css/register.css
+++ b/source/src/main/webapp/css/register.css
@@ -22,7 +22,7 @@ main {
 	height: auto;
 	object-fit: contain;
 }
-/* ヘッダー&フッター（ログイン画面） */
+/* ヘッダー&フッター（ユーザー登録画面） */
 .header {
     height: 100px;
     background-color: #f2acac;
@@ -173,28 +173,28 @@ main {
     font-size: 14px;
   }
 
-  #login {
+  #register {
     width: 90%;
     padding: 5% 0;
     border-radius: 10%;
   }
 
-  #login-form {
+  #registerForm {
     padding: 20px;
     font-size: 16px;
   }
 
-  .login-item {
+  .register-item {
     margin: 10px;
     font-size: 14px;
   }
 
-  .login-item input {
+  .register-item input {
     width: 100%;
     height: 30px;
   }
 
-  .loginButton {
+  .registerButton {
     font-size: 16px;
   }
 
