--- a/source/src/main/webapp/css/login.css
+++ b/source/src/main/webapp/css/login.css
@@ -1,11 +1,18 @@
+@charset "UTF-8";
 
-
-body {
+html, body {
     margin: 0 0 0 0; /* ページ全体の四隅のスペースをなくす */
+    
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
 }
 main {
 	background: rgba(231, 208, 169, 0.1);
 	padding: 60px;
+	flex: 1;
 }
 .title {
     padding: 0 0 25px 0;
@@ -28,6 +35,7 @@ main {
 }
 .footer {
 	padding: 10px;
+	padding-bottom:30px;
     background-color: #9fdfec;
     text-align: center;
 }
@@ -102,8 +110,10 @@ main {
     z-index: 1;
     max-width: 360px;
     padding: 45px;
-    text-align: center;
     font-size:18px;
+}
+.form_bottom{
+	text-align: center;
 }
 .login-item {
     margin: 15px;
@@ -113,6 +123,7 @@ main {
 .login-item input {
 	height: 24px;
 	margin-top:3px;
+	width:100%;
 }
 .loginButton {
     text-transform: uppercase;
@@ -133,9 +144,11 @@ main {
 	font-size: 14px;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 844px) {
   main {
     padding: 20px;
+    padding-top: 60px;
+    padding-bottom: 100px;
   }
 
   .title {
@@ -143,8 +156,15 @@ main {
     flex-wrap: nowrap;   /* 折り返さない */
     font-size: 18px;
     text-align: center;
-    padding-bottom: 15px;
-    gap: 8px;
+    gap: 5px;
+    
+    height: 70px;
+    background-color: #f2acac;
+    padding: 10px;
+    padding-top:15px;
+    display: flex;          /* 追加：flexで横並びに */
+    align-items: center;    /* 追加：縦方向中央揃え */
+    justify-content: left; /* タイトル、ロゴ左寄せ */
   }
 
   .logo {
@@ -159,14 +179,14 @@ main {
     text-align: center;
   }
 
-  .header {
+ /*.header {
     height: 70px;
   }
 
   .footer {
     padding: 8px;
     font-size: 14px;
-  }
+  }*/
 
   #login {
     width: 90%;
@@ -181,7 +201,7 @@ main {
 
   .login-item {
     margin: 10px;
-    font-size: 14px;
+    font-size: 18px;
   }
 
   .login-item input {
@@ -190,7 +210,7 @@ main {
   }
 
   .loginButton {
-    font-size: 16px;
+    padding:5px;
   }
 
   .tooltip {
@@ -207,6 +227,6 @@ main {
 
   #error-message, #error-area {
     font-size: 13px;
-    text-align: center;
+    padding-left:10px;
   }
 }
