--- a/source/src/main/webapp/css/register.css
+++ b/source/src/main/webapp/css/register.css
@@ -1,12 +1,22 @@
 @charset "UTF-8";
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
 
 body {
     margin: 0 0 0 0; /* ページ全体の四隅のスペースをなくす */
+    background: rgba(231, 208, 169, 0.01);
+    color: #2f514f
 }
 main {
 	background: rgba(231, 208, 169, 0.1);
 	padding: 60px;
+	flex: 1;
 }
 .title {
     padding: 0 0 25px 0;
@@ -29,6 +39,7 @@ main {
 }
 .footer {
 	padding: 10px;
+	padding-bottom:30px;
     background-color: #9fdfec;
     text-align: center;
 }
@@ -103,8 +114,11 @@ main {
     z-index: 1;
     max-width: 360px;
     padding: 45px;
-    text-align: center;
+    
     font-size:18px;
+}
+.form_bottom{
+	text-align: center;
 }
 .register-label{
 	text-align: left;
@@ -117,6 +131,7 @@ main {
 .register-item input {
 	height: 24px;
 	margin-top:3px;
+	width:100%;
 }
 .registerButton {
     text-transform: uppercase;
@@ -138,9 +153,11 @@ main {
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 844px) {
   main {
     padding: 20px;
+    padding-top: 60px;
+    padding-bottom: 100px;
   }
 
   .title {
@@ -148,8 +165,15 @@ main {
     flex-wrap: nowrap;   /* 折り返さない */
     font-size: 18px;
     text-align: center;
-    padding-bottom: 15px;
-    gap: 8px;
+    gap: 5px;
+    
+    height: 70px;
+    background-color: #f2acac;
+    padding: 10px;
+    padding-top:15px;
+    display: flex;          /* 追加：flexで横並びに */
+    align-items: center;    /* 追加：縦方向中央揃え */
+    justify-content: left; /* タイトル、ロゴ左寄せ */
   }
 
   .logo {
@@ -164,14 +188,17 @@ main {
     text-align: center;
   }
 
-  .header {
-    height: 70px;
-  }
-
-  .footer {
+  /*.footer {
     padding: 8px;
     font-size: 14px;
-  }
+  }*/
+  
+  .footer {
+	padding: 10px;
+	padding-bottom:30px;
+    background-color: #9fdfec;
+    text-align: center;
+}
 
   #register {
     width: 90%;
@@ -186,16 +213,16 @@ main {
 
   .register-item {
     margin: 10px;
-    font-size: 14px;
+    font-size: 18px;
   }
 
-  .register-item input {
+ .register-item input {
     width: 100%;
     height: 30px;
   }
 
   .registerButton {
-    font-size: 16px;
+    padding:5px;
   }
 
   .tooltip {
@@ -212,6 +239,6 @@ main {
 
   #errorMessage, #error-area {
     font-size: 13px;
-    text-align: center;
+    padding-left:10px;
   }
 }
