--- a/source/src/main/webapp/css/check.css
+++ b/source/src/main/webapp/css/check.css
@@ -18,7 +18,8 @@ h1 {
 }
 @media screen and (max-width: 400px) {
   #h1 {
-    font-size: 20px;
+    height: 70px;
+    margin-top: 12.6px;
   }
 
   #logo {
