--- a/source/src/main/webapp/css/check.css
+++ b/source/src/main/webapp/css/check.css
@@ -18,12 +18,12 @@ h1 {
 }
 @media screen and (max-width: 400px) {
   #h1 {
-    height: 70px;
-    margin-top: 12.6px;
+    font-size: 20px;
   }
 
   #logo {
-    height: 30px;
+    height: 70px;
+    margin-top: 12.7px;
   }
 }
 
