--- a/source/src/main/webapp/css/common.css
+++ b/source/src/main/webapp/css/common.css
@@ -48,15 +48,14 @@ h1 {
   /* height: 40px; */
   margin-right: 10px;
 }
-
 @media screen and (max-width: 400px) {
   #h1 {
-    height: 70px;
-    margin-top: 12.6px;
+    font-size: 20px;
   }
 
   #logo {
-    height: 30px;
+    height: 70px;
+    margin-top: 12.7px;
   }
 }
 
