--- a/source/src/main/webapp/css/home.css
+++ b/source/src/main/webapp/css/home.css
@@ -98,5 +98,35 @@ main {
 
 /* スマホ用のサイズ調整 */
 @media screen and (max-width: 480px) {
-	
+  h1 {
+    font-size: 24px;
+  }
+  
+  .haikei {
+    left: -165px;
+    top: -60px;
+    width: 231px;
+    height: 148px;
+  }
+  
+  .home_comment img {
+    top: 10px;
+    width: 100px;
+    max-width: 100px;
+    height: 50px;
+  }
+  
+  .home_comment div {
+    font-size: 20px;
+    top: 15px;
+    left: 20px;
+  }
+  
+  .character img {
+    left: 70px;
+    top: 70px;
+    width: 70px;
+    max-width: 70px;
+    height: 70px;
+  }
 }
