--- a/source/src/main/webapp/css/home.css
+++ b/source/src/main/webapp/css/home.css
@@ -1,36 +1,62 @@
 @charset "UTF-8";
 
-main {
-    margin: 0;
-    flex-grow: 1;
-    background-color: rgba(231, 208, 169, 0.2);
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  height: 100%;
+  min-height: 100vh;
 }
+
+main {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 20px;
+  min-height: 80vh;
+  box-sizing: border-box;
+  background-color: rgba(231, 208, 169, 0.065);
+}
+
+
+#logo {
+   width: 100px;
+}
+
+.container {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 16px;
+  box-sizing: border-box;
+}
+
 
 /*キャラクターの吹き出し*/
 .home_comment img {
     position: absolute;
-    top: 120px;
+    top: 50px;
     width: 400px;
     max-width: 400px;
-    height: 200px;
+    height: 150px;
 }
 
 /*キャラクターのコメント*/
 .home_comment div {
     position: absolute;
-    font-size: 100px;
-    top: 130px;
-    left: 50px;
+    font-size: 80px;
+    top: 50px;
+    left: 70px;
 }
 
 /*キャラクター画像*/
 .character img {
-    position: absolute;
-    left: 360px;
-    top: 300px;
-    width: 200px;
-    max-width: 200px;
-    height: 200px;
+  position: absolute;
+  top: 240px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 300px;
+  max-width: 90vw;
+  height: auto;
 }
 
 /* アイテムメニューの枠 */
@@ -91,9 +117,10 @@ main {
     position: relative;
     background-color: white;
     border: 1px solid #005751;
-    width: 925px;
+    margin-top: 50px;
+    /*width: 925px;*/
     height: 590px;
-    transform: translate(185px, -40px);
+    /*transform: translate(185px, -40px);*/
 }
 
 /* スマホ用のサイズ調整 */
@@ -103,10 +130,10 @@ main {
   }
   
   .haikei {
-    left: -165px;
-    top: -60px;
-    width: 231px;
-    height: 148px;
+    /*left: -165px;
+    top: 50px;*/
+    width: 350px;
+    height: 500px;
   }
   
   .home_comment img {
@@ -123,10 +150,53 @@ main {
   }
   
   .character img {
-    left: 70px;
-    top: 70px;
-    width: 70px;
-    max-width: 70px;
-    height: 70px;
+        left: 95px;
+        top: 50px;
+        width: 90px;
+        max-width: 90px;
+        height: 90px;
+  }
+  
+  .items_waku {
+    transform: none; /* スマホでは中央や左寄せに */
+    justify-content: center;
+    width: 100%;        /* 幅を柔軟に */
+    overflow: hidden;   /* 内容がはみ出してもスクロールさせない */
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .character img {
+    position: relative;
+    display: block;
+    margin: 0 auto;
+    width: 200px;
+    max-width: 200px;
+    height: auto;
+    top: 180px;
+    left: 135px;
+  }
+
+  .home_comment {
+    position: relative;
+    text-align: center;
+    padding: 20px 0;
+  }
+
+  .home_comment img {
+        top: 20px;
+        left: 20px;
+        width: 200px;
+        max-width: 200px;
+        /* height: auto; */
+        height: 200px;
+  }
+
+  .home_comment div {
+    font-size: 24px;
+    position: relative;
+    margin-top: 5px;
+    top: 50px;
+    left: -50px;
   }
 }
