--- a/source/src/main/webapp/css/check_results.css
+++ b/source/src/main/webapp/css/check_results.css
@@ -18,11 +18,13 @@ h2 {
 	border: 1px solid #333333;
 	border-radius: 10px;
 	text-align:center;
+
 }
 .tab-container {
     max-width: 1000px;
     margin: 0 auto;
     margin-top: 30px;
+	
 }
 
 /* ラジオボタンを非表示にする */
@@ -62,6 +64,7 @@ h2 {
     padding: 20px;
     border: 2px solid black;
     border-top: none;
+    background: white;
 }
 
 /* チェックされたタブのスタイル */
@@ -70,7 +73,10 @@ h2 {
 #tab3:checked ~ .tab-labels .label3,
 #tab4:checked ~ .tab-labels .label4 {
     background: #9fdfec;
+}
 
+.tab-label {
+	background: white;
 }
 
 /* チェックされたコンテンツを表示 */
@@ -145,6 +151,7 @@ h2 {
 	gap: 8px;
 	margin-top: 30px;
 	margin-left: 30px;
+	
 }
 .label-column label {
 	margin-top: 15px;
@@ -230,15 +237,22 @@ h2 {
 .home {
     text-transform: uppercase;
     background: #daf7e1;
-    border: 1px solid;
+    border: 1px black solid;
     width: 50%;
     color: #2f514f;
     font-size: 14px;
     -webkit-transition: all 0.3 ease;
     transition: all 0.3 ease;
     cursor: pointer;
-    margin: 15px;
-    box-sizing: border-box;
+    margin: auto;
+    text-align:center;
+    width: 100px;
+    height: 30px;
+    font-size: 20px;
+    text-decoration: none;
+    display: block;
+    margin-top: 20px;
+    
 }
 .home:hover{
 	background    : rgba(47, 81, 79, 0.85);     /* 背景色     */
@@ -280,6 +294,34 @@ h2 {
     text-align: right;
     white-space: nowrap;
     animation: anima-bar-chart-1 1.2s ease;
+}
+.week_comments {
+	font-size: 20px;
+	border-radius: 20px;
+	border: 2px solid black;
+	background-color: white;
+	margin-top: 20px;
+}
+.week_item {
+	margin-left:20px;
+	font-size:23px;
+}
+.week_comment {
+	margin-left:20px;
+}
+.month_comments {
+	font-size: 20px;
+	border-radius: 20px;
+	border: 2px solid black;
+	background-color: white;
+	margin-top: 20px;
+}
+.month_item {
+	margin-left:20px;
+	font-size:23px;
+}
+.month_comment {
+	margin-left:20px;
 }
 /* 月結果の棒グラフ 
 .labels div,
