--- a/source/src/main/webapp/css/check_results.css
+++ b/source/src/main/webapp/css/check_results.css
@@ -353,3 +353,362 @@ h2 {
         width: 0;
     }
 }
+
+@media screen and (max-width:390px) {
+	/*　画面サイズが390px以下の場合ここの記述が適用される　*/
+
+h2 {
+  padding: 10px;
+  margin-bottom: 30px;
+  margin: auto;
+  font-size: 10px;
+  border: 1px solid #333333;
+  border-radius: 10px;
+  background-color: #9fdfec;
+  max-width: 900px;
+  text-align: center;
+}
+.check_results {
+	max-width: 700px;
+	padding: 10px;	
+	margin-bottom: 30px;
+	margin: auto;
+	border: 1px solid #333333;
+	border-radius: 10px;
+	text-align:center;
+
+}
+.tab-container {
+    max-width: 1000px;
+    margin: 0 auto;
+    margin-top: 30px;
+	
+}
+
+/* ラジオボタンを非表示にする */
+.tab-input {
+    display: none;
+}
+
+/* タブのスタイル */
+.tab-labels {
+    display: flex;
+    border-bottom: 2px solid black;
+}
+
+.tab-group_left{
+  display: flex;
+  justify-content: flex-start; /* 左グループは左寄せ */
+}
+
+.tab-group_right{
+  display: flex;
+  justify-content: flex-end;   /* 右グループは右寄せ */
+}
+
+
+.tab-label {
+    padding: 10px 20px;
+    cursor: pointer;
+    border: 2px solid black;
+    border-bottom: none;
+    margin-right: 5px;
+    border-radius: 8px 8px 0 0;
+}
+
+/* コンテンツエリアのスタイル */
+.tab-content {
+    display: none;
+    padding: 20px;
+    border: 2px solid black;
+    border-top: none;
+    background: white;
+}
+
+/* チェックされたタブのスタイル */
+#tab1:checked ~ .tab-labels .label1,
+#tab2:checked ~ .tab-labels .label2,
+#tab3:checked ~ .tab-labels .label3,
+#tab4:checked ~ .tab-labels .label4 {
+    background: #9fdfec;
+}
+
+.tab-label {
+	background: white;
+}
+
+/* チェックされたコンテンツを表示 */
+#tab1:checked ~ .content1,
+#tab2:checked ~ .content2,
+#tab3:checked ~ .content3,
+#tab4:checked ~ .content4 {
+    display: block;
+}
+.radar-container {
+	display: flex;
+	align-items: flex-start;
+	gap: 24px;
+}
+/* レーダーチャートのスタイル */
+.radar-chart-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 230px;
+    height: 230px;
+    margin: 0 auto;
+    padding: 35px;
+    box-sizing: content-box;
+    margin-top:20px;
+}
+
+.radar-chart-1 svg {
+    width: 100%;
+    height: 100%;
+}
+
+.radar-chart-1 dl {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.radar-chart-1 dl > div {
+    position: absolute;
+    color: #777;
+    font-size: .6em;
+    text-align: center;
+}
+
+.radar-chart-1 dl > div:nth-child(1) {
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.radar-chart-1 dl > div:nth-child(2) {
+    bottom: 25%;
+    right: 10%;
+    transform: translateX(50%);
+}
+
+.radar-chart-1 dl > div:nth-child(3) {
+    bottom: 25%;
+    left: 10%;
+    transform: translateX(-50%);
+}
+
+.radar-chart-1 dd {
+    margin: 0;
+}
+
+.label-column {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	margin-top: 30px;
+	margin-left: 30px;
+	
+}
+.label-column label {
+	margin-top: 15px;
+	font-size: 25px;
+	margin-bottom: 15px;
+}
+.check_comments {
+	border-top: 2px solid black;
+}
+
+.check_item {
+	border: 2px solid black;
+	background-color: #9fdfec;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	width: 150px;
+	border-radius: 10px;
+	height: 40px;
+	font-size: 23px;
+	text-align: center;
+}
+
+.check_ca {
+	font-size: 20px;
+	margin-top: 13px;
+	margin-bottom: 13px;
+}
+
+.bar-chart-1 {
+    font-size: 16px;
+    width: 950px
+}
+.bar-item {
+	
+}
+.bar-score {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
+  margin-left: 20px;
+  text-align: right;
+  margin-right: 30px;
+  font-size: 20px;
+}
+#bar-score2 {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0;
+  margin-left: 20px;
+  text-align: right;
+  margin-right: 30px;
+  font-size: 20px;
+}
+.bar-date {
+  flex-shrink: 0;
+  width: 55px;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size: 20px;
+}
+.bar-chart-1 > div {
+	display:flex;
+    align-items: center;
+    margin-bottom: 7px;
+}
+
+.bar-chart-1 dt {
+
+}
+
+.bar-chart-1 dd {
+    margin: 0;
+    padding-right: 15px;
+    border-radius: 3px;
+    background-color: #2589d0;
+    color: #fff;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: right;
+    white-space: nowrap;
+    animation: anima-bar-chart-1 1.2s ease;
+}
+.home {
+    text-transform: uppercase;
+    background: #daf7e1;
+    border: 1px black solid;
+    width: 50%;
+    color: #2f514f;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+    margin: auto;
+    text-align:center;
+    width: 100px;
+    height: 30px;
+    font-size: 20px;
+    text-decoration: none;
+    display: block;
+    margin-top: 20px;
+    
+}
+.home:hover{
+	background    : rgba(47, 81, 79, 0.85);     /* 背景色     */
+  	color         : #def7e1;     /* 文字色     */
+}
+
+@keyframes anima-bar-chart-1 {
+    from {
+        width: 0;
+    }
+}
+
+.bar-chart-2 {
+    font-size: 16px;
+    width:950px
+}
+
+.bar-chart-2 > div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 7px;
+}
+
+.bar-chart-2 dt {
+    width: 55px;
+    min-width: 55px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.bar-chart-2 dd {
+    margin: 0;
+    padding-right: 15px;
+    border-radius: 3px;
+    background-color: #2589d0;
+    color: #fff;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: right;
+    white-space: nowrap;
+    animation: anima-bar-chart-1 1.2s ease;
+}
+.week_comments {
+	font-size: 20px;
+	border-radius: 20px;
+	border: 2px solid black;
+	background-color: white;
+	margin-top: 20px;
+}
+.week_item {
+	margin-left:20px;
+	font-size:23px;
+}
+.week_comment {
+	margin-left:20px;
+}
+.month_comments {
+	font-size: 20px;
+	border-radius: 20px;
+	border: 2px solid black;
+	background-color: white;
+	margin-top: 20px;
+}
+.month_item {
+	margin-left:20px;
+	font-size:23px;
+}
+.month_comment {
+	margin-left:20px;
+}
+/* 月結果の棒グラフ 
+.labels div,
+.bars div {
+  margin-bottom: 12px;
+}
+.labels {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+   width: 55px;
+   min-width: 55px;
+}
+.bars {
+    margin: 0;
+    padding-right: 15px;
+    border-radius: 3px;
+    background-color: #2589d0;
+    border: 2px solid #333;
+    color: #fff;
+    font-weight: 600;
+    line-height: 45px;
+    text-align: right;
+    white-space: nowrap;
+    animation: anima-bar-chart-1 1.2s ease;
+} */
+@keyframes anima-bar-chart-2 {
+    from {
+        width: 0;
+    }
+}
+}
