--- a/source/src/main/webapp/css/home.css
+++ b/source/src/main/webapp/css/home.css
@@ -34,6 +34,14 @@ main {
   border: 1px solid #005751;
 }
 
+.haikei_kabe {
+  position: absolute;
+  width: 100%;
+  height:70%;
+  background-color: #e7dda957;
+  z-index: 100;
+}
+
 /* キャラクターの吹き出し */
 .home_comment img {
   position: absolute;
@@ -41,6 +49,7 @@ main {
   width: 500px;
   max-width: 500px;
   height: 193px;
+  z-index: 500;
 }
 
 /* キャラクターのコメント */
@@ -54,10 +63,11 @@ main {
   max-height: 134px;
   display: flex;
   align-items: center;
-  font-size: 31px;
+  font-size: 28px;
   text-align: center;
   overflow-wrap: break-word;
   white-space: normal;
+  z-index: 500;
 }
 
 /* キャラクター画像 */
@@ -69,6 +79,7 @@ main {
   width: 300px;
   max-width: 90vw;
   height: auto;
+  z-index: 500;
 }
 
 /* アイテムメニューの枠 */
@@ -135,6 +146,15 @@ main {
     height: 500px;
     margin: 24px auto;
   }
+  
+  .haikei_kabe {
+    position: absolute;
+    width: 100%;
+    height: 73%;
+    background-color: #e7dda957;
+    z-index: 100;
+    top: 0px;
+  }
 
   .home_comment {
     position: relative;
@@ -143,24 +163,29 @@ main {
   }
 
   .home_comment img {
-    top: 65px;
-    left: 6px;
-    width: 230px;
-    max-width: 230px;
+    top: 78px;
+    left: 40px;
+    width: 270px;
+    max-width: 270px;
     height: 194px;
+    background-color: transparent;
   }
 
   .home_comment div {
-    top: 92px;
-    left: 39px;
+    top: 114px;
+    left: 71px;
     font-size: 20px;
-    max-width: 200px;
+    max-width: 210px;
+    width: 210px;
+    max-height: 120px;
+    height: 100px;
+        
   }
 
   .character img {
     display: block;
     top: 262px;
-    left: 176px;
+    left: 173px;
     width: 200px;
     max-width: 200px;
     height: auto;
@@ -172,4 +197,5 @@ main {
     transform: none;
     overflow: hidden;
   }
+ 
 }
