--- a/source/src/main/webapp/css/check_results.css
+++ b/source/src/main/webapp/css/check_results.css
@@ -184,6 +184,27 @@ h2 {
     font-size: 16px;
     width: 950px
 }
+
+.bar-chart-1 {
+    font-size: 16px;
+    width: 950px;
+    max-width: 100%;
+    box-sizing: border-box;
+}
+.bar-item {
+  display: flex;
+  align-items: center;
+  max-width: 100%;
+  margin-bottom: 10px;
+}
+.bar-graph {
+  height: 35px;
+  background-color: #7cdedc;
+  margin: 0 10px;
+  flex-grow: 1;
+  transition: width 0.3s;
+}
+
 .bar-item {
 	
 }
@@ -354,14 +375,14 @@ h2 {
     }
 }
 
-@media screen and (max-width:390px) {
+@media screen and (max-width:391px) {
 	/*　画面サイズが390px以下の場合ここの記述が適用される　*/
 
 h2 {
   padding: 10px;
   margin-bottom: 30px;
   margin: auto;
-  font-size: 10px;
+  font-size: 18px;
   border: 1px solid #333333;
   border-radius: 10px;
   background-color: #9fdfec;
@@ -376,7 +397,7 @@ h2 {
 	border: 1px solid #333333;
 	border-radius: 10px;
 	text-align:center;
-
+	font-size:15px;
 }
 .tab-container {
     max-width: 1000px;
@@ -408,14 +429,19 @@ h2 {
 
 
 .tab-label {
-    padding: 10px 20px;
+    padding: 5px 15px;
     cursor: pointer;
     border: 2px solid black;
     border-bottom: none;
     margin-right: 5px;
     border-radius: 8px 8px 0 0;
 }
-
+.calender_input {
+	width:50px;
+}
+.calender_button {
+	width:50px;
+}
 /* コンテンツエリアのスタイル */
 .tab-content {
     display: none;
@@ -445,9 +471,7 @@ h2 {
     display: block;
 }
 .radar-container {
-	display: flex;
-	align-items: flex-start;
-	gap: 24px;
+	display:block;
 }
 /* レーダーチャートのスタイル */
 .radar-chart-1 {
@@ -458,7 +482,7 @@ h2 {
     width: 230px;
     height: 230px;
     margin: 0 auto;
-    padding: 35px;
+    padding:0px;
     box-sizing: content-box;
     margin-top:20px;
 }
@@ -501,20 +525,28 @@ h2 {
 
 .radar-chart-1 dd {
     margin: 0;
+    padding-right:0px;
+    border-radius:3px;
+    font-weight:600px;
+    line-height:20px;
+    text-align: right;
+    white-space: nowrap;
+    font-size:10px;
+    height: 20px;
 }
 
 .label-column {
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
-	margin-top: 30px;
-	margin-left: 30px;
+	margin-top: 20px;
+	margin-left: 0px;
 	
 }
 .label-column label {
-	margin-top: 15px;
-	font-size: 25px;
-	margin-bottom: 15px;
+	margin-top: 0px;
+	font-size: 14px;
+	margin-bottom: 0px;
 }
 .check_comments {
 	border-top: 2px solid black;
@@ -539,20 +571,38 @@ h2 {
 }
 
 .bar-chart-1 {
-    font-size: 16px;
-    width: 950px
+    width: 100%;
+    max-width: 300px;
+    padding: 0 0px;
 }
 .bar-item {
-	
+  display: flex;
+  align-items: center;
+  max-width: 100%;
+  margin-bottom: 10px;
+}
+.bar-graph {
+  height: 10px;
+  background-color: #7cdedc;
+  transition: width 0.3s;
+}
+.bar-graph-container{
+    flex-grow: 1;
+    width: 100%;
+    height: 20px;
+    margin-top:1px;
+    margin: 0 8px;
+    border-radius: 3px;
+    overflow: hidden;
 }
 .bar-score {
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: 0;
-  margin-left: 20px;
+  margin-left: 0px;
   text-align: right;
-  margin-right: 30px;
-  font-size: 20px;
+  margin-right: 0px;
+  font-size: 13px;
 }
 #bar-score2 {
   flex-grow: 1;
@@ -565,24 +615,25 @@ h2 {
 }
 .bar-date {
   flex-shrink: 0;
-  width: 55px;
-  margin-left: 20px;
-  margin-right: 20px;
-  font-size: 20px;
+  width: 30px;
+  margin-left: 0px;
+  margin-right: 0px;
+  font-size: 13px;
 }
 .bar-chart-1 > div {
 	display:flex;
     align-items: center;
-    margin-bottom: 7px;
+    margin-bottom: 5px;
 }
 
 .bar-chart-1 dt {
 
 }
 
+
 .bar-chart-1 dd {
     margin: 0;
-    padding-right: 15px;
+    padding-right: 0px;
     border-radius: 3px;
     background-color: #2589d0;
     color: #fff;
@@ -590,6 +641,7 @@ h2 {
     line-height: 30px;
     text-align: right;
     white-space: nowrap;
+    font-size: 10px;
     animation: anima-bar-chart-1 1.2s ease;
 }
 .home {
@@ -706,6 +758,23 @@ h2 {
     white-space: nowrap;
     animation: anima-bar-chart-1 1.2s ease;
 } */
+footer {
+    /* width: 100%; */
+    padding: 0px;
+    padding-top:10px;
+    padding-bottom: 10px;
+    background-color: #9fdfec;
+    text-align: center;
+}
+header {
+    height: 70px;
+    /* width: 100%; */
+    background-color: #f2acac;
+    padding: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 @keyframes anima-bar-chart-2 {
     from {
         width: 0;
