check.cssのモバイル修正

--- a/source/src/main/webapp/css/check.css
+++ b/source/src/main/webapp/css/check.css
@@ -225,6 +225,10 @@ hr {
 
 /* スマホ用のメディアクエリ（画面が狭いときの調整） */
 @media screen and (max-width: 480px) {
+  main {
+	padding: 30px;
+  }
+  
   h1 {
     font-size: 24px;
   }
