--- a/source/src/main/webapp/css/check_results.css
+++ b/source/src/main/webapp/css/check_results.css
@@ -504,28 +504,38 @@ h2 {
     width: 100%;
     height: 100%;
 }
-
 .radar-chart-1 dl > div {
     position: absolute;
     color: #777;
     font-size: .6em;
     text-align: center;
 }
-
+.stress1 {
+	position:absolute;
+	top: -15px;
+}
+.stress2 {
+	position:absolute;
+	bottom:20px;
+}
+.stress3 {
+	position: absolute;
+	bottom: 20px;
+}
 .radar-chart-1 dl > div:nth-child(1) {
-    top: 0;
+    top: -15px;
     left: 50%;
     transform: translateX(-50%);
 }
 
 .radar-chart-1 dl > div:nth-child(2) {
-    bottom: 25%;
+    bottom: 20px;
     right: 10%;
     transform: translateX(50%);
 }
 
 .radar-chart-1 dl > div:nth-child(3) {
-    bottom: 25%;
+    bottom: 20px;
     left: 10%;
     transform: translateX(-50%);
 }
@@ -533,7 +543,6 @@ h2 {
 .radar-chart-1 dd {
     margin: 0;
     padding-right:0px;
-    border-radius:3px;
     font-weight:600px;
     line-height:20px;
     text-align: right;
@@ -740,6 +749,18 @@ h2 {
 }
 .month_comment {
 	margin-left:10px;
+}
+.stress1 {
+	position:absolute;
+	top: -15px;
+}
+.stress2 {
+	position:absolute;
+	bottom:20px;
+}
+.stress3 {
+	position: absolute;
+	bottom: 20px;
 }
 /* 月結果の棒グラフ 
 .labels div,
